--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,3 +27,17 @@ main{
   font-family: 'Josefin Sans', sans-serif;
   font-size:x-large;
   }
+  #dropdown-button-dark{
+   
+    border: none;
+  color: black;
+  padding: 5px 3px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+      }
+.btn-block{
+  background-color: #4CAF50;
+  color:black;
+}
