--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,4 +40,9 @@ main{
 .btn-block{
   background-color: #4CAF50;
   color:black;
+  border-radius: 0%;
+  width: 250px;
+  margin-left:30px;
+  margin-top: 10px;
 }
+
