--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,8 +41,16 @@ main{
   background-color: #4CAF50;
   color:black;
   border-radius: 0%;
-  width: 250px;
+  width: 200px;
   margin-left:30px;
   margin-top: 10px;
+}
+#follow{
+  border-radius: 10%;
+  background-color: white;
+  color:blue;
+  font-weight: bold;
+  border: 2px solid blue;
+ 
 }
 
